--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,9 @@ $vin-blue: #5bb7db;
 $vin-green: #60b044;
 $vin-red: #ff0000;
 
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
+
+
 /* Styles */
 body {
   font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -15,6 +18,12 @@ body {
   -moz-font-smoothing: antialiased;
   font-smoothing: antialiased;
   font-weight: 300;
+  font-family: 'Quicksand', sans-serif;
+}
+
+ul {
+  padding: 0;
+  list-style-type: none;
 }
 
 td {
@@ -25,7 +34,5 @@ h2 {
 	color: $vin-blue;
 }
 
-.savings { color: $vin-green; }
 .loss { color: $vin-red; }
 input.small { width: 46px; }
-td.fuel-savings-label { width: 175px; }
