--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,20 +1,37 @@
+#app {
+  height: inherit;
+}
+
+.app{
+  height: inherit;
+}
+
 .navbar {
-  background-color: #4d4d4d;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: orange;
   padding: 10px;
   display: flex;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
 .navbar .option {
-  width: 150px;
-  height: 25px;
-  font-size: 20px;
+  min-width: 150px;
+  height: 20px;
+  font-size: 18px;
   text-align: center;
   border-radius: 3px;
-  margin:10px;
+  margin-bottom: 3px;
+  vertical-align: middle;
   display: inline-block;
   text-decoration: none;
-  color: orange;
-  background-color: #676767;
+  color: #686868;
+}
+
+.page-content {
+  text-align: center;
+  height: inherit;
 }
 
 
