--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -74,13 +74,13 @@ input.small { width: 46px; }
   display: block;
   position: fixed;
   z-index: 1031;
-  top: 15px;
+  top: 10px;
   right: 15px;
 }
 
 #nprogress .spinner-icon {
-  width: 18px;
-  height: 18px;
+  width: 14px;
+  height: 14px;
   box-sizing: border-box;
 
   border: solid 2px transparent;
@@ -109,4 +109,40 @@ input.small { width: 46px; }
 @keyframes nprogress-spinner {
   0%   { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+.max-width{
+  width: 100%;
+}
+
+.fs20{
+  font-size: 20px;
+}
+
+.fs18{
+  font-size: 18px;
+}
+
+.fs14{
+  font-size: 14px;
+}
+
+.tr{
+  text-align: right;
+}
+
+.mr10{
+  margin-right: 10px;
+}
+
+.mr5{
+  margin-right: 5px;
+}
+
+.mt5{
+  margin-top: 5px;
+}
+
+.pb0{
+  padding-bottom: 0px;
 }
