--- a/src/components/App.css
+++ b/src/components/App.css
@@ -10,7 +10,14 @@
 .login-screen{
   text-align: center;
   height: inherit;
-  margin-top:200px;
+  padding-top:200px;
+}
+
+.user-email{
+  margin-left: auto;
+  color: white;
+  margin-top: 5px;
+  margin-right: 40px;
 }
 
 .navbar {
